--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <meta name="author" content="Yuriy Zudikhin" />
+    <meta name="author" content="Yuriy lasad" />
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -15,24 +15,24 @@
     <header class="header anime">
       <div class="container">
         <div class="header_block">
-          <a class="header_block_logo" href="https://zudikhin.github.io/casaverse/">
+          <a class="header_block_logo" href="https://lasad.github.io/casaverse/">
             <img src="img/header/logo.svg" alt="">
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="https://zudikhin.github.io/casaverse/">Home</a>
+              <a href="https://lasad.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
+              <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
+              <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+              <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
+              <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -41,7 +41,7 @@
             <span></span>
           </div>
           <div class="header_block_right">
-            <a href="https://zudikhin.github.io/casaverse/contacts.html">
+            <a href="https://lasad.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
           </div>
@@ -50,19 +50,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="https://zudikhin.github.io/casaverse/">Home</a>
+                <a href="https://lasad.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
+                <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
+                <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+                <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
+                <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -79,12 +79,12 @@
               <svg class="main_anim_desk" width="494" height="63" viewBox="0 0 494 63" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 55.467C204.028 55.467 489.633 64.3964 492.943 38.9166C499.109 -8.55669 5.83919 -11.7698 5.83945 31.0769C5.83963 62.1066 136.204 62 215.479 62" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
               </svg>
-              <svg class="main_anim_mob" width="314" height="37" viewBox="0 0 314 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 31.2515C0.447715 31.2515 0 31.6992 0 32.2515C0 32.8038 0.447715 33.2515 1 33.2515V31.2515ZM312.964 22.7554L311.974 22.6133L312.964 22.7554ZM4.06892 18.2572L3.06892 18.2573L4.06892 18.2572ZM1 33.2515C65.342 33.2515 142.852 34.5323 204.485 33.9858C235.305 33.7125 262.196 32.9822 281.521 31.4035C291.177 30.6147 298.986 29.611 304.464 28.3348C307.197 27.6982 309.407 26.9811 310.99 26.1587C312.513 25.3674 313.749 24.325 313.953 22.8975L311.974 22.6133C311.916 23.0133 311.492 23.6441 310.068 24.384C308.704 25.0926 306.682 25.7645 304.01 26.387C298.679 27.6289 290.989 28.6234 281.358 29.4101C262.11 30.9825 235.281 31.7126 204.467 31.9859C142.83 32.5325 65.4076 31.2515 1 31.2515V33.2515ZM313.953 22.8975C314.277 20.6417 312.912 18.7196 310.726 17.1361C308.521 15.5394 305.242 14.0964 301.117 12.7806C292.849 10.1429 280.878 7.92361 266.473 6.1119C237.645 2.48613 198.869 0.469347 159.993 0.0727797C121.115 -0.323799 82.0984 0.899546 52.7863 3.76292C38.1378 5.19387 25.8712 7.03819 17.2475 9.3079C12.9438 10.4406 9.48402 11.6952 7.07858 13.0925C4.73524 14.4537 3.0689 16.1449 3.06892 18.2573L5.06892 18.2572C5.06891 17.2966 5.84634 16.1212 8.08318 14.8219C10.2579 13.5586 13.5147 12.3585 17.7566 11.242C26.2242 9.01339 38.3649 7.1812 52.9807 5.75344C82.1973 2.8994 121.137 1.67653 159.972 2.07268C198.808 2.46883 237.501 4.48371 266.224 8.09626C280.594 9.90371 292.42 12.1052 300.51 14.686C304.564 15.9794 307.604 17.3451 309.552 18.7559C311.519 20.18 312.139 21.4643 311.974 22.6133L313.953 22.8975ZM3.06892 18.2573C3.06893 20.9276 4.63481 23.1385 7.13417 24.9422C9.62745 26.7415 13.1787 28.2384 17.4908 29.5003C26.1273 32.0277 38.1147 33.6953 51.6063 34.8017C78.6067 37.0159 111.886 37 137.011 37V35C111.864 35 78.6723 35.0146 51.7697 32.8084C38.3098 31.7046 26.4876 30.0493 18.0525 27.5808C13.8288 26.3448 10.5287 24.9255 8.30456 23.3204C6.08651 21.7197 5.06893 20.0378 5.06892 18.2572L3.06892 18.2573Z" fill="#A5FECB"/>
+              <svg class="main_anim_mob" width="304" height="36" viewBox="0 0 304 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M106.371 29.0694C235.262 33.6735 303 33.469 303 20.7708C303 -4.39292 1 -6.76104 1 20.7708C1 31.7876 79.8553 35 129.577 35" stroke="#A5FECB" stroke-width="2" stroke-linecap="round"/>
               </svg>
             </div>
             <div class="main_block_text_bottom">
-              <a href="https://zudikhin.github.io/casaverse/properties.html">
+              <a href="https://lasad.github.io/casaverse/properties.html">
                 <span>View Properties</span>
               </a>
             </div>
@@ -129,7 +129,7 @@
               </div>
               <div class="about_block_right_bot_right">
                 <p>From helping you scout out the finest properties on the market - whether it be a cozy spot to call home, or one with excellent resale value - to getting the best deals when it comes to all your other investments, we make sure your Dubai experience is just that: an experience. So come join us today at Casaverse and take 360-degree tour of high-quality property and investing options that our city offers!</p>
-                <a href="https://zudikhin.github.io/casaverse/contacts.html">
+                <a href="https://lasad.github.io/casaverse/contacts.html">
                   <span>Meet The Team</span>
                 </a>
               </div>
@@ -155,7 +155,7 @@
       </div>
       <div class="featured_slider">
 
-        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/1.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -181,7 +181,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/2.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -207,7 +207,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/3.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -233,7 +233,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/4.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -259,7 +259,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/1.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -285,7 +285,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/2.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -311,7 +311,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/3.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -337,7 +337,7 @@
           </div>
         </a>
 
-        <a class="featured_slider_item" href="https://zudikhin.github.io/casaverse/properties_single.html">
+        <a class="featured_slider_item" href="https://lasad.github.io/casaverse/properties_single.html">
           <img class="featured_slider_item_main" src="img/featured/4.png" alt="">
           <div class="featured_slider_item_text">
             <div class="featured_slider_item_text_top">
@@ -365,7 +365,7 @@
 
       </div>
       <div class="container">
-        <a class="featured_all" href="https://zudikhin.github.io/casaverse/properties.html">
+        <a class="featured_all" href="https://lasad.github.io/casaverse/properties.html">
           <span>View All</span>
         </a>
       </div>
@@ -378,7 +378,7 @@
       </div>
       <div class="neighborhoods_wrap">
         <div class="neighborhoods_slider">
-          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/1.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Dubai <br> Marina</p>
@@ -387,7 +387,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/2.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Arabian <br>Ranches</p>
@@ -398,7 +398,7 @@
 
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/3.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Palm <br>Jumeirah</p>
@@ -407,7 +407,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/4.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>DAMAC Lagoons</p>
@@ -416,7 +416,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/1.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Dubai <br> Marina</p>
@@ -425,7 +425,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/2.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Arabian <br>Ranches</p>
@@ -434,7 +434,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/3.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>Palm <br>Jumeirah</p>
@@ -443,7 +443,7 @@
               </svg>
             </div>
           </a>
-          <a class="neighborhoods_slider_item" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a class="neighborhoods_slider_item" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <img class="neighborhoods_slider_item_main" src="img/neighborhoods/4.jpg" alt="">
             <div class="neighborhoods_slider_item_text">
               <p>DAMAC Lagoons</p>
@@ -458,7 +458,7 @@
         </div>
       </div>
       <div class="container">
-        <a class="neighborhoods_all" href="https://zudikhin.github.io/casaverse/neighborhoods.html">
+        <a class="neighborhoods_all" href="https://lasad.github.io/casaverse/neighborhoods.html">
           <span>View All</span>
         </a>
       </div>
@@ -677,7 +677,7 @@
                 </div>
               </a>
             </div>
-            <a class="blog_block_wrap_link" href="https://zudikhin.github.io/casaverse/blog.html">
+            <a class="blog_block_wrap_link" href="https://lasad.github.io/casaverse/blog.html">
               <span>View All</span>
             </a>
           </div>
@@ -707,7 +707,7 @@
               </svg>
             </div>
             
-            <a class="work_block_wrap_btn" href="https://zudikhin.github.io/casaverse/contacts.html">
+            <a class="work_block_wrap_btn" href="https://lasad.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
             <img class="star_one" src="img/work/star_1.svg" alt="">
@@ -722,7 +722,7 @@
       <div class="container">
         <div class="footer_block">
           <div class="footer_block_left">
-            <a href="https://zudikhin.github.io/casaverse">
+            <a href="https://lasad.github.io/casaverse">
               <img src="img/footer/logo.svg" alt="">
             </a>
             <p>Casaverse is dedicated to representing properties of unparalleled distinction in Dubai. With a deep understanding of the local market and years of experience, we have been able to cater to the unique needs of our clients and help them find their dream properties. Whether you're looking to buy, sell, or rent a property, Casaverse is here to help you every step of the way.</p>
