--- a/neighborhoods.html
+++ b/neighborhoods.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <meta name="author" content="Yuriy Zudikhin" />
+    <meta name="author" content="Yuriy lasad" />
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -15,24 +15,24 @@
     <header class="header">
       <div class="container">
         <div class="header_block">
-          <a class="header_block_logo" href="https://zudikhin.github.io/casaverse/">
+          <a class="header_block_logo" href="https://lasad.github.io/casaverse/">
             <img src="img/header/logo.svg" alt="">
           </a>
           <ul>
             <li class="current-menu-item">
-              <a href="https://zudikhin.github.io/casaverse/">Home</a>
+              <a href="https://lasad.github.io/casaverse/">Home</a>
             </li>
             <li>
-              <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
+              <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
             </li>
             <li>
-              <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
+              <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
             </li>
             <li>
-              <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+              <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
             </li>
             <li>
-              <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
+              <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
             </li>
           </ul>
           <div class="header_block_btn">
@@ -41,7 +41,7 @@
             <span></span>
           </div>
           <div class="header_block_right">
-            <a href="https://zudikhin.github.io/casaverse/contacts.html">
+            <a href="https://lasad.github.io/casaverse/contacts.html">
               <span>Contact Us</span>
             </a>
           </div>
@@ -50,19 +50,19 @@
           <div class="header_drop_left">
             <ul>
               <li class="current-menu-item">
-                <a href="https://zudikhin.github.io/casaverse/">Home</a>
+                <a href="https://lasad.github.io/casaverse/">Home</a>
               </li>
               <li>
-                <a href="https://zudikhin.github.io/casaverse/about.html">About Us</a>
+                <a href="https://lasad.github.io/casaverse/about.html">About Us</a>
               </li>
               <li>
-                <a href="https://zudikhin.github.io/casaverse/properties.html">Properties</a>
+                <a href="https://lasad.github.io/casaverse/properties.html">Properties</a>
               </li>
               <li>
-                <a href="https://zudikhin.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
+                <a href="https://lasad.github.io/casaverse/neighborhoods.html">Neighborhoods</a>
               </li>
               <li>
-                <a href="https://zudikhin.github.io/casaverse/blog.html">Blog</a>
+                <a href="https://lasad.github.io/casaverse/blog.html">Blog</a>
               </li>
             </ul>
           </div>
@@ -87,7 +87,7 @@
       <div class="container">
         <div class="neighborhoods_page_block">
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/1.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/1.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_wrap">
               <div class="neighborhoods_page_block_item_title">
                 <h3>Dubai <br> Marina</h3>
@@ -105,7 +105,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/2.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/2.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Arabian <br> Ranches</h3>
               <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -121,7 +121,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/3.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/3.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Palm <br>Jumeirah</h3>
               <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -137,7 +137,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/4.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/4.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>DAMAC <br>Lagoons</h3>
               <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -153,7 +153,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/5.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/5.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Canal <br>Heights</h3>
               <svg class="five_feature_animation" width="129" height="90" viewBox="0 0 129 90" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -169,7 +169,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/6.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/6.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>District <br>One</h3>
               <svg class="three_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -185,7 +185,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/7.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/7.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Dubai <br>Harbour</h3>
               <svg class="two_feature_animation" width="186" height="100" viewBox="0 0 186 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -201,7 +201,7 @@
             </div>
           </a>
 
-          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/8.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://zudikhin.github.io/casaverse/neighborhoods_single.html">
+          <a style="background: linear-gradient(0deg, rgba(0, 3, 30, 0.4), rgba(0, 3, 30, 0.4)), url(img/neighborhoods_page/8.jpg), #D9D9D9; background-size: cover; background-position: 50%;" class="neighborhoods_page_block_item anime" href="https://lasad.github.io/casaverse/neighborhoods_single.html">
             <div class="neighborhoods_page_block_item_title">
               <h3>Downtown Burj <br> Khalifa</h3>
               <svg class="four_feature_animation" width="144" height="9" viewBox="0 0 144 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -239,7 +239,7 @@
               <img class="dream_img" src="img/dream/polosy.svg" alt="">
                 
             </h2>
-            <a href="https://zudikhin.github.io/casaverse/">
+            <a href="https://lasad.github.io/casaverse/">
               <span>BROWSE HOME</span>
             </a>
             <img class="star_one" src="img/dream/1.svg" alt="">
@@ -254,7 +254,7 @@
       <div class="container">
         <div class="footer_block">
           <div class="footer_block_left">
-            <a href="https://zudikhin.github.io/casaverse/">
+            <a href="https://lasad.github.io/casaverse/">
               <img src="img/footer/logo.svg" alt="">
             </a>
             <p>Casaverse is dedicated to representing properties of unparalleled distinction in Dubai. With a deep understanding of the local market and years of experience, we have been able to cater to the unique needs of our clients and help them find their dream properties. Whether you're looking to buy, sell, or rent a property, Casaverse is here to help you every step of the way.</p>
